--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,11 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
 
-    working_directory: ~/repo
+
 
     steps:
-      - checkout
-      - run npm install
-      - run npm test
+      #- checkout
+      - run: npm install
+      - run: npm test
 
     
