--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,15 +9,8 @@ jobs:
       # specify the version you desire here
       - image: circleci/node:10.15.3
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-
-
     steps:
-      #- checkout
+      - Checkout
       - run: npm install
       - run: npm test
 
